--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -9,6 +9,20 @@
 	will-change: transition;
 }
 
+h1,
+h2,
+h3,
+h4 {
+	font-family: 'Montserrat', sans-serif;
+}
+
+p {
+	font-family: 'Josefin Sans', sans-serif;
+	font-weight: bolder;
+	font-size: 20px;
+	color: rgba(0, 0, 0, 0.65);
+}
+
 .common {
 	margin-top: 80px;
 	position: relative;
