--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="assets/styles.css">
         <link href="jquery.fullPage.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600|Montserrat" rel="stylesheet">
     </head>
     <body>
         {% include "../sections/navbar.njk" %}
