Content Bug fixes

--- a/src/sections/contact.njk
+++ b/src/sections/contact.njk
@@ -1,7 +1,7 @@
 <section class="section">
     <div class="common">
     <div class="contact">
-        <h2 class="contact-heading">Contact US</h2>
+        <h2 class="contact-heading">Contact Us</h2>
         <div class="contacts_section">
             <div class="container">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
