--- a/src/sections/route.njk
+++ b/src/sections/route.njk
@@ -2,7 +2,7 @@
     <div class="route container">
 
         <div class="waypoints">
-            <h1>WayPoints</h1>
+            <h1>Waypoints</h1>
             <p>K.K Premachandran Sports Complex</p>
             <p>Bristow Road</p>
             <p>Venduruthy Bridge</p>
