--- a/src/sections/timer.njk
+++ b/src/sections/timer.njk
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="register">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSddm0Qy79z6XFXOO_rBmIkNsCEZUbccSKTT90iZH6WzUAfBtg/viewform" class="btn btn-danger reg-button" role="button">Register</a>
+            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSddm0Qy79z6XFXOO_rBmIkNsCEZUbccSKTT90iZH6WzUAfBtg/viewform" class="btn btn-danger reg-button" role="button">Register</a>
         </div>
     </div>
 </section>
