--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -24,6 +24,12 @@ p {
 	color: rgba(0, 0, 0, 0.65);
 }
 
+@media (max-width: 800px) {
+	p {
+		font-size: 15px;
+	}
+}
+
 .common {
 	margin-top: 80px;
 	position: relative;
