--- a/src/css/routes.css
+++ b/src/css/routes.css
@@ -12,6 +12,30 @@
 	margin-top: auto;
 	margin-bottom: auto;
 }
+
+.waypoints h1 {
+	font-size: 36px;
+}
+
+#map-button {
+	display: none;
+	margin: auto;
+}
+
+.waypoints i {
+	color: #4caf50;
+	font-size: 23px;
+}
+
+@media (max-width: 600px) {
+	#map {
+		display: none;
+	}
+	#map-button {
+		display: block;
+	}
+}
+
 @media (max-width: 980px) {
 	.waypoints {
 		width: 100%;
@@ -22,7 +46,7 @@
 		position: relative;
 	}
 	#map {
-		height: 50vh;
+		height: 40vh;
 		width: 100%;
 	}
 }
