--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>The Second Lap</title>
-        
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="assets/styles.css">
-        <link href="jquery.fullPage.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link rel="shortcut icon" href="favicon.png">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600|Montserrat" rel="stylesheet">
     </head>
     <body>
@@ -22,8 +22,6 @@
 
             {% include "../sections/contact.njk" %}
         </div>
-        <script src="./jquery-3.2.1.min%20(1).js"></script>
-        <script src="jquery.fullPage.min.js"></script>
         <script src="https://use.fontawesome.com/75bc5066dd.js"></script>
         <script src="assets/scripts.js"></script>
         <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJogV8LYqidEbxxMRXHR4DLTxQtk_V5Kc&callback=initMap">
@@ -44,7 +42,7 @@
                         $('.run-image').css({transform: 'translate(-50%,'+scroll+'px)'});
                     }
                 });
-            })
+            });
 	        
         </script>
     </body>
