--- a/src/sections/navbar.njk
+++ b/src/sections/navbar.njk
@@ -4,6 +4,9 @@
             <img src="./imgs/mec_logo.png" class="colg-logo">
         </div>
         <div class="right">
+            <img src="./imgs/yesbank.png" class="excel-logo">
+        </div>
+        <div class="right">
             <img src="./imgs/excel2017.png" class="right excel-logo">
         </div>
     </div>
