--- a/src/sections/sponsors.njk
+++ b/src/sections/sponsors.njk
@@ -6,7 +6,7 @@
 					<img src="./imgs/gold.png" class="sponsor-logo " />
 				</div>
 	            <div class="sponsor-text">
-					<p><b>Gold's Gym</b>, an International fitness centre is  proud to associate with <b>Excel 2017</b> and <b>The Second Lap</b>.The winners of this mini marathon will be rewarded with a year long free membership costing Rs 32,000.
+					<p><b>Gold's Gym</b>, an International fitness centre is  proud to associate with <b>Excel 2017</b> and <b>The Second Lap</b>. The winners of this mini marathon will be rewarded with a year long free membership costing Rs 32,000.
 					</p>
 	            </div>
 		</div>
@@ -15,7 +15,7 @@
 					<img src="./imgs/yesbank.png" class="sponsor-logo" />
 				</div>
 	            <div class="sponsor-text">
-					<p><b>YES BANK</b> is India's fourth largest private sector bank and are the proud sponsors of <b>The Second Lap</b>,which is a mini marathon conducted to spread the message of organ donation.
+					<p><b>YES BANK</b> is India's fourth largest private sector bank and are the proud sponsors of<b> The Second Lap</b>, which is a mini marathon conducted to spread the message of organ donation.
 					</p>
 	            </div>
 		</div>
@@ -24,7 +24,7 @@
 					<img src="./imgs/medical.png" class="sponsor-logo" />
 				</div>
             	<div class="sponsor-text">
-					<p><b>Medical Trust Hospital</b> is a super speciality hospital located at Kochi,and are the  official medical partners of <b>The second Lap</b>.
+					<p><b>Medical Trust Hospital</b> is a super speciality hospital located at Kochi,and are the official medical partners of <b>The Second Lap</b>.
 					</p>
 	            </div>
 		</div>
