--- a/src/css/style.css
+++ b/src/css/style.css
@@ -190,6 +190,7 @@ a {
 	.bloc-time {
 		display: block;
 		margin-right: 0;
+		width: 30%;
 	}
 	.wrap {
 		display: block;
@@ -207,7 +208,7 @@ a {
 		width: 60px;
 	}
 	.countdown {
-		display: block;
+		display: flex;
 	}
 	.countdown .figure > span {
 		font: normal 60px "Lato";
@@ -225,6 +226,12 @@ a {
 	}
 	.count-title {
 		margin-top: 15px;
+	}
+}
+
+@media (max-width: 600px) {
+	.bloc-time {
+		width: 50%;
 	}
 }
 @media (max-width: 350px) {
