--- a/src/sections/contact.njk
+++ b/src/sections/contact.njk
@@ -6,12 +6,12 @@
             <div class="container">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
                     <h2 class="contact-head">Elza Tess Varkey</h2>
-                    <p>Social Initatives Manager, Excel2017</p>
+                    <p>Social Initiatives Manager, Excel 2017</p>
                     <p>+91 9562391591</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <h2 class="contact-head">Arjun Saju</h2>
-                    <p>Chairman, Excel2017</p>
+                    <p>Chairman, Excel 2017</p>
                     <p>+91 8943239997</p>
                 </div>
             </div>
